Use completeBaseName instad of baseName

Users are free to add as many dots as they want to the resource's
filename.

BUG:453702
(cherry picked from commit 3ba6d0d9bcfb24d0d8dc5669ed115e1aa8378897)